# HemiSpec

./: .editorconfig  .gitattributes  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  MATERIALS_TODO.md  README.md  hemispec.spec  hemispec_gui.spec  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml
.github/workflows/: ci.yml  docs.yml
assets/: README.md
assets/atlases/: README.md
assets/models/: README.md
assets/stylesheets/: extra.css
citation/: index.html
data-and-models/: index.html
developer/: index.html
developer/api-design/: index.html
developer/architecture/: index.html
developer/deployment/: index.html
developer/developer-guide/: index.html
developer/dgn-model-bundle/: index.html
developer/gui-design/: index.html
developer/gui-user-guide-zh/: index.html
developer/local-model-deployment-zh/: index.html
developer/methods-and-metrics-zh/: index.html
developer/outputs-zh/: index.html
developer/project-structure/: index.html
developer/release-verification-v0.1.0/: index.html
developer/roadmap/: index.html
developer/toolkit-release-artifacts/: index.html
docs/: citation.md  citation.zh.md  data-and-models.md  data-and-models.zh.md  index.md  index.zh.md  installation.md  installation.zh.md  manuscript-figures.md  manuscript-figures.zh.md  quickstart.md  quickstart.zh.md  release-artifacts.md  release-artifacts.zh.md  software-overview.md  software-overview.zh.md
examples/: README.md  run_example.sh
installation/: index.html
manuscript-figures/: index.html
methods/: index.html
quickstart/: index.html
reference/: index.html
release-artifacts/: index.html
scripts/: README.md  build_exe.ps1  build_release.ps1  hemispec.cmd  hemispec_entry.py  hemispec_gui_d2l.cmd  hemispec_gui_entry.py  recompute_icbmval_gan_roi_and_eval.py  train_hemisphere_classifier_modes.py
search/: search_index.json
software-overview/: index.html
src/hemispec/: io.py  (+17 more)
tests/: README.md  conftest.py  smoke_test.py  test_api.py  test_cli_contract.py  test_compute.py  test_gui_contract.py  test_plots.py  test_quickstart.py  test_similarity.py
tutorials/: index.html
zh/: index.html
(+152 files in other folders)
